# Research

./: README.md
kv/: CMakeLists.txt  QUICKSTART.md  README.md
kv/analysis/: analyze.py  plot_heatmap.py  plot_timeline.py
kv/analysis_out/: metrics.csv
kv/experiments/: run_experiments.py
kv/runs/leader_crash_hb100_to1200_1771787335797/: A.jsonl  B.jsonl  C.jsonl  client_events.jsonl  fault.json  meta.json
kv/runs/leader_crash_hb100_to1200_1771787894494/: A.jsonl  B.jsonl  C.jsonl  client_events.jsonl  fault.json  meta.json
kv/runs/leader_crash_hb100_to1200_1771788785299/: A.jsonl  B.jsonl  C.jsonl  client_events.jsonl  fault.json  meta.json
kv/runs/leader_crash_hb100_to1200_1771788998858/: A.jsonl  B.jsonl  C.jsonl  client_events.jsonl  fault.json  meta.json
kv/runs/leader_crash_hb100_to200_1771787315821/: A.jsonl  B.jsonl  C.jsonl  client_events.jsonl  fault.json  meta.json
kv/runs/leader_crash_hb100_to200_1771787874557/: A.jsonl  B.jsonl  C.jsonl  client_events.jsonl  fault.json  meta.json
kv/runs/leader_crash_hb100_to200_1771788765332/: A.jsonl  B.jsonl  C.jsonl  client_events.jsonl  fault.json  meta.json
kv/runs/leader_crash_hb100_to200_1771788978895/: A.jsonl  B.jsonl  C.jsonl  client_events.jsonl  fault.json  meta.json
kv/src/: main.cpp  node.cpp  node.h  store.cpp  store.h  util.cpp  util.h
new-kv-store-data/: CMakeLists.txt  README.md  requirements.txt
new-kv-store-data/scripts/: compute_metrics.py  plot_paper_figures.py  plot_results.py  run_experiments.py
new-kv-store-data/tests/: __init__.py  test_analysis_smoke.py
(+1831 files in other folders)
